# beyla-rust

./: README.md
basic/: Cargo.toml  config.yml
basic/src/: main.rs
total_request_times/: Cargo.toml  config.yml
total_request_times/src/: main.rs
